--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,9 @@ rest:
   port: 8001
   gzip_compression_level: 5
 
+auth:
+  secret: supersecret
+
 db:
   dsn: foosball:secret@tcp(localhost:3306)/foosball?charset=utf8&parseTime=True
   debug: false
