--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-LOG_LEVEL=INFO
+LOG_LEVEL=info
 REST_PORT=8080
+SECRET=supersecret
+MYSQLUSER=user
+MYSQLPASSWORD=password
+MYSQLHOST=host
+MYSQLPORT=8080
+MYSQLDB=database
+MYSQL_URL=mysql://user:password@host:port/database
