fix variable names

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-LOG_LEVEL=info
-REST_PORT=8080
+LOGLEVEL=info
+RESTPORT=8080
 SECRET=supersecret
 MYSQLUSER=user
 MYSQLPASSWORD=password
 MYSQLHOST=host
-MYSQLPORT=8080
-MYSQLDB=database
-MYSQL_URL=mysql://user:password@host:port/database
+MYSQLPORT=6630
+MYSQLDATABASE=database
