--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,14 @@ on:
 
 jobs:
   test:
+    name: Test 🧪
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
           go-version: 1.20
-
-      - uses: actions/checkout@v3
-
       - name: Test
         run: go test -v ./...
