--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,15 @@
 name: Test
-
+on: [push, pull_request]
 permissions:
   contents: read
   pull-requests: read
-
-on:
-  push:
-    branches: [master]
-  pull_request: {}
-
 jobs:
   test:
     name: Test 🧪
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.20
-      - name: Test
-        run: go test -v ./...
+      - run: go test -v ./...
