--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,13 @@
 name: Test
-on: [push, pull_request]
+on:
+  push:
+    tags:
+      - v*
+    branches:
+      - master
+  pull_request:
 permissions:
   contents: read
-  pull-requests: read
 jobs:
   test:
     name: Test 🧪
