fix workflow new attempt

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,9 @@ jobs:
     name: Test 🧪
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: 1.20
+          cache: false
+      - uses: actions/checkout@v3
       - run: go test -v ./...
