--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,26 +1,23 @@
 name: Lint
-
-permissions:
-  contents: read
-  pull-requests: read
-
 on:
   push:
-    branches: [master]
-  pull_request: {}
-
+    tags:
+      - v*
+    branches:
+      - master
+  pull_request:
+permissions:
+  contents: read
 jobs:
   lint:
     name: Lint 🧹
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+          go-version: "1.20"
+          cache: false
+      - uses: actions/checkout@v3
+      - uses: golangci/golangci-lint-action@v3
         with:
           version: v1.51.2
