--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,21 @@
 name: Test
-
-permissions:
-  contents: read
-  pull-requests: read
-
 on:
   push:
-    branches: [master]
-  pull_request: {}
-
+    tags:
+      - v*
+    branches:
+      - master
+  pull_request:
+permissions:
+  contents: read
 jobs:
   test:
     name: Test 🧪
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-      - name: Test
-        run: go test -v ./...
+          go-version: "1.20"
+          cache: false
+      - uses: actions/checkout@v3
+      - run: go test -v ./...
