--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 jobs:
   test:
-    name: Test 🧪
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v4
