add support for unrated matches

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -485,6 +485,9 @@ paths:
                   type: array
                   items:
                     type: integer
+                rated:
+                  type: boolean
+                  example: true
       responses:
         "201":
           description: "Match created"
