--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,7 @@ jobs:
           go-version: "1.20"
           cache: false
       - uses: actions/checkout@v3
-      - run: go test -v ./...
+      - run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
+      - uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
